Load Plotly library for dashboard charts

--- a/coupon_offline_dashboard_plus_en.html
+++ b/coupon_offline_dashboard_plus_en.html
@@ -5,7 +5,8 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>INDENG 242A — Offline Interactive Dashboard (Extended)</title>
-<div>                        <script type="text/javascript">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>
+<script type="text/javascript">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>
+<script src="https://cdn.plot.ly/plotly-2.31.1.min.js"></script>
 <style>
   body {font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Apple Color Emoji","Segoe UI Emoji",sans-serif; margin:0;}
   header { padding: 18px 22px; border-bottom: 1px solid #e5e7eb; }
