Update title and header for coupon dashboard

--- a/coupon_offline_dashboard_plus_en.html
+++ b/coupon_offline_dashboard_plus_en.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>INDENG 242A — Offline Interactive Dashboard (Extended)</title>
+<title>INDENG 242A — In-Vehicle Coupon Selection Project Dashboard</title>
 <script type="text/javascript">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>
 <script src="https://cdn.plot.ly/plotly-2.31.1.min.js"></script>
 <style>
@@ -34,8 +34,8 @@
 </head>
 <body>
 <header>
-  <h1>INDENG 242A — Offline Interactive Dashboard (Extended)</h1>
-  <div class="sub">Dataset: In-vehicle Coupon Recommendation | Author: Jingyan Li | Single-file, fully offline</div>
+  <h1>INDENG 242A — In-Vehicle Coupon Selection Project Dashboard</h1>
+  <div class="sub">Dataset: In-vehicle Coupon Recommendation | Author: Jingyan Li</div>
 </header>
 
 <div class="container">
