Remove AUC mention from evaluation metrics

--- a/coupon_interactive_dashboard.html
+++ b/coupon_interactive_dashboard.html
@@ -136,7 +136,7 @@
       <div class="card">
         <h3>Methods</h3>
         <p class="muted"><strong>Models:</strong><br/>Logistic Regression (baseline)<br/>L1 Logistic Regression (CV-selected λ)<br/>CART (cost-complexity pruned)<br/>Logit + CART ensemble (probability average)<br/>Bagging (200 trees)<br/>Random Forest (300 trees, CV-tuned)<br/>Gradient Boosting (CV-tuned)</p>
-        <p class="muted"><strong>Evaluation metrics:</strong> Accuracy = (TP + TN)/(Total); TPR = TP/(TP + FN); FPR = FP/(FP + TN); AUC for L1 logit.</p>
+        <p class="muted"><strong>Evaluation metrics:</strong> Accuracy = (TP + TN)/(Total); TPR = TP/(TP + FN); FPR = FP/(FP + TN).</p>
       </div>
     </div>
   </div>
