Add dataset download links to dashboard

--- a/coupon_interactive_dashboard.html
+++ b/coupon_interactive_dashboard.html
@@ -250,6 +250,9 @@
       <div class="card">
         <div class="label">CSV downloads</div>
         <p><a id="dlMetrics" download="model_metrics_threshold_0_5.csv">Model metrics (threshold 0.5) CSV</a></p>
+        <p><a href="in_vehicle_coupon_selection.csv" download>Original dataset CSV</a></p>
+        <p><a href="cs_train.csv" download>cs_train CSV</a></p>
+        <p><a href="cs_test.csv" download>cs_test CSV</a></p>
         <div id="dlImpList"></div>
         <div class="small">Each plot also supports PNG export (camera icon in the top-right toolbar).</div>
       </div>
